test/spec_vectors/load/fail/module_37.wat
(module (memory 1) (func (result i64) (i64.load16_u (f32.const 0))))